Fixed bug on bullet auto creation; Remember side visibility;

--- a/styles/secondmemory.less
+++ b/styles/secondmemory.less
@@ -21,9 +21,9 @@ atom-panel {
       // float:right;
       overflow: scroll;
 
-      span.refresh-button {
-        position: relative;
-        float: right;
+      li.sm-panel-icons {
+        position: absolute;
+        // float: right;
         right: -5px;
         top: 7px;
       }
